cluster-resources/services/martialmatch-scraper/martialmatch-scraper-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: martialmatch-scraper-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bjj.golebiowski.dev
      secretName: letsencrypt-prod-martialmatch-scraper-tls-secret
  rules:
    - host: bjj.golebiowski.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: martialmatch-scraper-service
                port:
                  number: 8000
